# zake

./: Cargo.toml  IMPROVEMENTS.md  README.md
docs/: IMPLEMENTED.md  INSTALL.md
src/: app.rs  cli.rs  git.rs  index.rs  lib.rs  main.rs  note.rs  notebook.rs  search.rs  tui.rs
web/: package.json
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
