[package]
name = "zake"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
fuzzy-matcher = "0.3"
ignore = "0.4"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"
